# cloudcostsmcp

./: .env.example  .gitignore  .goreleaser.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  proposal-plan.md  pyproject.toml  server.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: docker.yml  opencloudcosts-go.yml  release.yml  tests.yml  workflow.yml
Formula/: README.md  opencloudcosts.rb
deploy/: README.md
deploy/docker/: docker-compose.yml
deploy/kubernetes/: deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.yaml.example  service.yaml
docs/: finops-guide.md  future-tasks.md  harness-results.md  roadmap.md  roadmap_0_8_0.md  tools.md
docs/plans/: RC3-004-compare-bom-regions-design.md  RC3-038-get-coverage-design.md  T18-aws-spot-pricing.md  T19-ri-upfront-options.md  T20-os-field-bom.md  T21-refresh-cache-metadata.md  T22-gcp-major-regions.md  T23-phase4-error-messages.md  T24-test-coverage.md  T25-no-results-hints.md  T26-gcp-effective-pricing.md  T27-get-database-price-tool.md  T28-azure-provider.md  T29-http-transport.md  T30-spot-price-history.md  T31-gcp-windows-pricing.md  T40-execution-workplan.md  T40-go-rewrite.md  T41-sku-lookup.md
examples/: README.md  cline.json  codex.toml  continue.yaml  cursor.json  goose.yaml  http-client.json  zed.json
local-test-harness/: .env.example  README.md  analyse.py  judge.py  rsku_manifest.json  run_matrix.py  run_tests.py
opencloudcosts-go/: .gitignore  .golangci.yml  Dockerfile  README.md  TEST_PARITY.md  go.mod  go.sum
opencloudcosts-go/.github/workflows/: ci.yml
opencloudcosts-go/cmd/opencloudcosts/: main.go
opencloudcosts-go/internal/cache/: cache.go  cache_test.go
opencloudcosts-go/internal/config/: config.go  config_test.go
opencloudcosts-go/internal/models/: models.go  models_test.go
opencloudcosts-go/internal/providers/: base.go
opencloudcosts-go/internal/providers/aws/: aws.go  aws_bulk.go  aws_bulk_test.go  aws_container.go  aws_container_test.go  aws_finops.go  aws_finops_test.go  aws_network.go  aws_network_alb_test.go  aws_pricing.go  aws_pricing_test.go  aws_savingsplans.go  aws_savingsplans_test.go  aws_sku_lookup.go  aws_sku_lookup_test.go  live_integration_test.go  testhooks.go
opencloudcosts-go/internal/providers/azure/: azure.go  azure_retry_test.go  azure_sku_lookup.go  azure_sku_lookup_test.go  azure_test.go
opencloudcosts-go/internal/providers/gcp/: auth.go  gcp.go  gcp_ai.go  gcp_analytics.go  gcp_analytics_test.go  (+19 more)
opencloudcosts-go/internal/server/: output_validation_test.go  server.go  server_test.go
opencloudcosts-go/internal/skulookup/: skulookup.go
opencloudcosts-go/internal/tools/: availability.go  availability_test.go  bom.go  bom_test.go  cachetool.go  cachetool_test.go  compare_bom.go  compare_bom_regions.go  compare_bom_regions_test.go  compare_bom_test.go  coverage.go  coverage_test.go  lookup.go  lookup_test.go  search_pricing.go  search_pricing_test.go  sku_lookup.go  sku_lookup_batch_test.go  sku_lookup_test.go  spot_history.go  spot_history_test.go  warmcache.go  warmcache_test.go
opencloudcosts-go/internal/utils/: baseline.go  baseline_test.go  egress_tiers.go  egress_tiers_test.go  gcp_specs.go  gcp_specs_test.go  http_retry.go  http_retry_test.go  money.go  money_test.go  regions.go  regions_test.go  spec_infer.go  spec_infer_test.go  units.go  units_test.go
opencloudcosts-go/schemas/: tools-output-snapshot.json  tools-snapshot.json
packaging/pypi/: README.md  build_wheels.py  pyproject.toml.template
src/cloudcostmcp/: config.py  server.py
src/cloudcostmcp/providers/: aws.py  base.py  gcp.py
src/cloudcostmcp/tools/: availability.py  bom.py  lookup.py
src/cloudcostmcp/utils/: units.py
src/opencloudcosts/: cache.py  config.py  models.py  server.py
src/opencloudcosts/providers/: __init__.py  aws.py  azure.py  base.py  gcp.py  gcp_auth.py
src/opencloudcosts/tools/: availability.py  bom.py  lookup.py
src/opencloudcosts/utils/: baseline.py  egress_tiers.py  gcp_specs.py  http_retry.py  money.py  regions.py  spec_infer.py  units.py
tests/: conftest.py  test_cache.py  test_models.py
tests/test_providers/: test_aws.py  test_azure.py  test_egress.py  test_gcp.py  test_gcp_armor_monitoring.py  test_gcp_auth.py  test_gcp_bigquery.py  test_gcp_cloud_storage_sql.py  test_gcp_gke.py  test_gcp_memorystore.py  test_gcp_networking.py  test_gcp_vertex.py  test_provider_contract.py
tests/test_tools/: test_armor_monitoring.py  test_azure_list_instance_types.py  test_bigquery.py  test_bom.py  test_bom_extended.py  test_cache_tools.py  test_fargate_bedrock.py  test_gcp_major_regions.py  test_gke.py  test_list_instance_types_effective_max.py  test_lookup_db.py  test_lookup_extended.py  test_lookup_no_results.py  test_memorystore.py  test_networking.py  test_phase2.py  test_storage_monthly_estimate.py  test_t23_gcp_errors.py  test_vertex.py
tests/test_utils/: test_baseline.py  test_egress_tiers.py  test_http_retry.py  test_money.py  test_spec_infer.py
