[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opencloudcosts"
version = "0.1.0"
description = "Open source MCP server for accurate public and effective cloud pricing (AWS, GCP)"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "boto3>=1.34",
    "aiosqlite>=0.20",
    "httpx>=0.27",
]

[project.optional-dependencies]
gcp = ["google-cloud-billing>=1.13"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "boto3-stubs[pricing,ce,savingsplans]>=1.34",
]

[project.scripts]
opencloudcosts = "opencloudcosts.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/opencloudcosts"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
