[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opencloudcosts"
version = "0.7.0"
description = "Open source MCP server for accurate public and effective cloud pricing (AWS, GCP, Azure)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "x7even", email = "x7sima@gmail.com"},
]
keywords = ["mcp", "cloud", "pricing", "aws", "gcp", "azure", "finops", "cost"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp[cli]>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "boto3>=1.34",
    "aiosqlite>=0.20",
    "httpx>=0.27",
]

[project.optional-dependencies]
gcp = ["google-cloud-billing>=1.13"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "boto3-stubs[pricing,ce,savingsplans]>=1.34",
]

[project.scripts]
opencloudcosts = "opencloudcosts.server:main"

[project.urls]
Homepage = "https://github.com/x7even/cloudcostmcp"
Repository = "https://github.com/x7even/cloudcostmcp"
Issues = "https://github.com/x7even/cloudcostmcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/opencloudcosts"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
